<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AttReportActivity">

    <TextView
        android:id="@+id/textViewEmployeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:padding="8dp"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/empReportTableHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewEmployeName"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/header_cell_bg"
            android:gravity="center"
            android:text="@string/date_of_the_month" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/header_cell_bg"
            android:gravity="center"
            android:text="@string/no_of_hours_logged" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/employeReportRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/empReportTableHeader"
        android:layout_marginBottom="100dp">

    </androidx.recyclerview.widget.RecyclerView>


    <LinearLayout
        android:id="@+id/hoursLoggedtableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/hours_logged_header_cell_bg"
                android:gravity="center"
                android:text="@string/hours_logged"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/hours_logged_header_cell_bg"
                android:gravity="center"
                android:text="@string/days_present"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/hours_logged_header_cell_bg"
                android:gravity="center"
                android:text="@string/days_absent"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHoursLogged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/hours_logged_table_cell_bg"
                android:gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDaysPresent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/hours_logged_table_cell_bg"
                android:gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDaysAbsent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/hours_logged_table_cell_bg"
                android:gravity="center_horizontal"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/employeReportProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewNoreports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_reports"
        android:textStyle="bold"
        android:visibility="gone" />


</RelativeLayout>